log
Tue 26 Sep 2023 10:30:41 PM UTC: 
 tests:  0|4
total_score: 0/70
74fe543
Tue 26 Sep 2023 10:42:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: unknown type name ‘heap’; did you mean ‘Heap’?
   36 |   heap* nuevo= (heap)malloc(sizeof(heap));
      |   ^~~~
      |   Heap
heap.c:36:17: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   36 |   heap* nuevo= (heap)malloc(sizeof(heap));
      |                 ^~~~
      |                 Heap
heap.c:36:17: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:22: error: expected ‘,’ or ‘;’ before ‘malloc’
   36 |   heap* nuevo= (heap)malloc(sizeof(heap));
      |                      ^~~~~~
heap.c:36:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   36 |   heap* nuevo= (heap)malloc(sizeof(heap));
      |         ^~~~~
heap.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
110c930
Tue 26 Sep 2023 10:42:32 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap* nuevo= (Heap)malloc(sizeof(Heap));
      |   ^~~~
heap.c:36:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   36 |   Heap* nuevo= (Heap)malloc(sizeof(Heap));
      |         ^~~~~
heap.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cfcef26
Tue 26 Sep 2023 10:43:46 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap* nuevo= (Heap)malloc(sizeof(Heap));
      |   ^~~~
heap.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0f3c9f9
Tue 26 Sep 2023 10:43:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0406dee
Tue 26 Sep 2023 10:44:06 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
5d93381
Tue 26 Sep 2023 11:06:57 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:22: error: ‘heapElemen’ undeclared (first use in this function); did you mean ‘heapElem’?
   39 |   nuevo->heapArray= (heapElemen*)malloc(sizeof(heapElemen)*nuevo->size);
      |                      ^~~~~~~~~~
      |                      heapElem
heap.c:39:22: note: each undeclared identifier is reported only once for each function it appears in
heap.c:39:33: error: expected expression before ‘)’ token
   39 |   nuevo->heapArray= (heapElemen*)malloc(sizeof(heapElemen)*nuevo->size);
      |                                 ^
Compilation failed
a0a593e
Tue 26 Sep 2023 11:07:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:22: error: ‘heapElemen’ undeclared (first use in this function); did you mean ‘heapElem’?
   39 |   nuevo->heapArray= (heapElemen*)malloc(sizeof(heapElemen)*nuevo->size);
      |                      ^~~~~~~~~~
      |                      heapElem
heap.c:39:22: note: each undeclared identifier is reported only once for each function it appears in
heap.c:39:33: error: expected expression before ‘)’ token
   39 |   nuevo->heapArray= (heapElemen*)malloc(sizeof(heapElemen)*nuevo->size);
      |                                 ^
Compilation failed
50bf028
Tue 26 Sep 2023 11:07:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:22: error: ‘heapElemen’ undeclared (first use in this function); did you mean ‘heapElem’?
   39 |   nuevo->heapArray= (heapElemen*)malloc(sizeof(heapElemen)*nuevo->capac);
      |                      ^~~~~~~~~~
      |                      heapElem
heap.c:39:22: note: each undeclared identifier is reported only once for each function it appears in
heap.c:39:33: error: expected expression before ‘)’ token
   39 |   nuevo->heapArray= (heapElemen*)malloc(sizeof(heapElemen)*nuevo->capac);
      |                                 ^
Compilation failed
81abffc
Tue 26 Sep 2023 11:08:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
a7941da
Tue 26 Sep 2023 11:09:00 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:6: error: expected expression before ‘)’ token
   40 |   if()
      |      ^
heap.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7133b3f
Tue 26 Sep 2023 11:09:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
2a11e6a
Tue 26 Sep 2023 11:09:39 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
1996fe9
Tue 26 Sep 2023 11:11:30 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
ca91dcd
Tue 26 Sep 2023 11:12:27 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:29: error: lvalue required as left operand of assignment
   21 |   if(pq == NULL || pq->size = 0){
      |                             ^
Compilation failed
8218d73
Tue 26 Sep 2023 11:12:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b3fc7ca
Tue 26 Sep 2023 11:16:30 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   30 |   if(pq->size = pq->capac){
      |      ^~
heap.c:32:5: error: conversion to non-scalar type requested
   32 |     pq->heapArray = (heapElem)realloc(pq->heapArray,sizeof(heapElem)* pq->capac);
      |     ^~
cc1: all warnings being treated as errors
Compilation failed
87b973e
Tue 26 Sep 2023 11:16:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:5: error: conversion to non-scalar type requested
   32 |     pq->heapArray = (heapElem)realloc(pq->heapArray,sizeof(heapElem)* pq->capac);
      |     ^~
Compilation failed
738aba3
Tue 26 Sep 2023 11:16:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6b0aae1
Tue 26 Sep 2023 11:16:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a1a8ff8
Tue 26 Sep 2023 11:18:09 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:13: error: ‘prerity’ undeclared (first use in this function); did you mean ‘priority’?
   36 |   nuevoElem-prerity= p;
      |             ^~~~~~~
      |             priority
heap.c:36:13: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:22: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   36 |   nuevoElem-prerity= p;
      |                      ^
      |                      pq
Compilation failed
a815b1e
Tue 26 Sep 2023 11:18:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:12: error: invalid operands to binary - (have ‘heapElem’ {aka ‘struct nodo’} and ‘int’)
   36 |   nuevoElem-priority= p;
      |            ^
heap.c:36:23: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   36 |   nuevoElem-priority= p;
      |                       ^
      |                       pq
heap.c:36:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c3e767b
Tue 26 Sep 2023 11:18:24 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:23: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   36 |   nuevoElem.priority= p;
      |                       ^
      |                       pq
heap.c:36:23: note: each undeclared identifier is reported only once for each function it appears in
heap.c:34:12: error: variable ‘nuevoElem’ set but not used [-Werror=unused-but-set-variable]
   34 |   heapElem nuevoElem;
      |            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ec34eb3
